DerpSite : Fix Alignment for different devices

--- a/css/style.css
+++ b/css/style.css
@@ -880,7 +880,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #devices .links {
   margin-top: 15px;
-  padding: 0px 115px;
+  padding: 0px 42%;
   justify-content: center;
 }
 
